// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationsActions notifyFailure должен быть вызван с параметрами для bad-karma 1`] = `
<SpamDetectedError
  error={
    Object {
      "name": "bad-karma",
    }
  }
/>
`;

exports[`notificationsActions notifyFailure должен быть вызван с параметрами для spam-detected 1`] = `
<SpamDetectedError
  error={
    Object {
      "name": "spam-detected",
    }
  }
/>
`;
